--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,8 @@ name: Actualizar GeoJSON desde Google Sheets
 
 on:
   schedule:
-    - cron: '0 * * * *'   # cada hora (UTC)
-  workflow_dispatch:       # correr manualmente
+    - cron: '0 * * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -22,7 +22,7 @@ jobs:
       - name: Instalar dependencias
         run: |
           python -m pip install --upgrade pip
-          pip install pandas geopandas shapely pyproj fiona
+          pip install pandas pyproj
 
       - name: Generar GeoJSON
         run: python update_geojson.py
@@ -34,5 +34,4 @@ jobs:
           git add docs/dictamenes.geojson
           git commit -m "Actualizar GeoJSON automático" || echo "Sin cambios para commitear"
           git push
-
 
